--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ weather_info-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# Ignore .env file that contains the enviroment variables of openweather API
+.env
